@@ -1,0 +1,1 @@
+Provides easy parsing of URLs and their constituent parts.
